crates/plotnik-tests/tests/04-emit/bytecode/fields/swapped_order.txt
Q = (binary_expression
  right: (_)
  left: (_)
)
------------------ DIAGNOSTICS -------------------
error: the grammar places `left:` before `right:` in `binary_expression`
 --> query.ptk:2:3
  |
1 | Q = (binary_expression
  |      ----------------- inside `binary_expression`
2 |   right: (_)
  |   ^^^^^^^^^^
3 |   left: (_)
  |   --------- `left:` must come before `right:`
  |
help: write `left:` before `right:`
